plugins {
    id 'org.springframework.boot' version '2.7.3'
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
    id 'java'
    id "org.ec4j.editorconfig" version "0.0.3"
    id 'antlr'
}

group 'ch.ethz'
version '1.0-SNAPSHOT'

sourceCompatibility = '1.17'
targetCompatibility = '1.17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    implementation 'com.sun.xml.bind:jaxb-impl:4.0.0'

    implementation 'org.yaml:snakeyaml:1.30'
    implementation 'org.postgresql:postgresql:42.5.0'
    implementation 'com.mchange:c3p0:0.9.5.5'
    implementation 'org.javatuples:javatuples:1.2'
    implementation 'org.apache.commons:commons-csv:1.9.0'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-text:1.9'
    implementation 'org.tukaani:xz:1.9'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'org.simplejavamail:simple-java-mail:7.5.0'
    implementation 'jakarta.mail:jakarta.mail-api:2.1.0'
    implementation 'jakarta.activation:jakarta.activation-api:2.1.0'
    implementation 'org.jooq:jooq:3.17.3'
    implementation 'redis.clients:jedis:4.2.3'
    implementation 'com.github.luben:zstd-jni:1.5.2-3'

    antlr 'org.antlr:antlr4:4.10.1'
    implementation 'org.antlr:antlr4-runtime:4.10.1'

    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
}

generateGrammarSource {
    outputDirectory = file("src/main/java")
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes "Main-Class": "ch.ethz.lapis.Main"
    }
}
